syntax = "proto3";

option csharp_namespace = "GrpcService";

package customers;

service Customer {
    rpc GetCustomersInfo (EmptyModel) returns (CustomersDataModel);
    rpc GetCustomerInfo (CustomerFindModel) returns (CustomerDataModel);
}

message EmptyModel {}

message CustomersDataModel {
    repeated CustomerDataModel items = 1;
}

message CustomerFindModel {
    int32 userId = 1; // bool, int32, float, double, string
}

message CustomerDataModel {
    string firstName = 1;
    string lastName = 2;
}